// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Schema parser throw error when plural schema is missing 1`] = `
"The schema \`Account\` does not have a plural slug and name defined.

Please define them in your schema definition file and include them in the \`Schemas\` interface:

import type * as Schema from 'ronin/schema';

type Accounts = Schema.Records<Account>;

interface Schemas {
  account: Account;
  accounts: Accounts;
}"
`;

exports[`Schema parser throw error referenced schema is not registered 1`] = `
"The following schemas were used as a reference but weren't included in the \`Schemas\` interface:

  - \`Session\` in \`Account\` (schemas/index.ts:9:13)

Please include them in the \`Schemas\` interface or remove their references."
`;

exports[`Schema parser throw error schema field type cannot be determined 1`] = `
"The type of the following fields could not be determined:

  - \`Account.session\` is typed as \`ThisIsNotAValidType\` (schemas/index.ts:5:13)

Please make sure that the field is typed as any of the available field types:

  - \`string\`
  - \`number\`
  - \`boolean\`
  - \`Date\`
  - \`Schema.Blob\`
  - \`Schema.JSON\`
  - or a reference to another schema."
`;

exports[`Schema parser schema with basic field types 1`] = `
[
  {
    "fields": [
      {
        "displayAs": "single-line",
        "id": "string-0",
        "name": "Name",
        "required": true,
        "slug": "name",
        "type": "string",
        "unique": false,
      },
      {
        "id": "boolean-0",
        "name": "Active",
        "required": true,
        "slug": "active",
        "type": "boolean",
        "unique": false,
      },
      {
        "id": "number-0",
        "name": "Likes",
        "required": true,
        "slug": "likes",
        "type": "number",
        "unique": false,
      },
      {
        "id": "date-0",
        "name": "ActiveAt",
        "required": true,
        "slug": "activeAt",
        "type": "date",
        "unique": false,
      },
    ],
    "name": "Account",
    "pluralName": "Accounts",
    "pluralSlug": "accounts",
    "slug": "account",
  },
]
`;

exports[`Schema parser schema with referenced field type 1`] = `
[
  {
    "fields": [
      {
        "id": "reference-0",
        "name": "Session",
        "required": true,
        "schema": "session",
        "slug": "session",
        "type": "reference",
        "unique": false,
      },
    ],
    "name": "Account",
    "pluralName": "Accounts",
    "pluralSlug": "accounts",
    "slug": "account",
  },
  {
    "fields": [
      {
        "displayAs": "single-line",
        "id": "string-0",
        "name": "Device",
        "required": true,
        "slug": "device",
        "type": "string",
        "unique": false,
      },
    ],
    "name": "Session",
    "pluralName": "Sessions",
    "pluralSlug": "sessions",
    "slug": "session",
  },
]
`;

exports[`Schema parser schema with advanced field types 1`] = `
[
  {
    "fields": [
      {
        "id": "blob-0",
        "name": "Avatar",
        "required": true,
        "slug": "avatar",
        "type": "blob",
        "unique": false,
      },
      {
        "id": "json-0",
        "name": "Metadata",
        "required": true,
        "slug": "metadata",
        "type": "json",
        "unique": false,
      },
    ],
    "name": "Account",
    "pluralName": "Accounts",
    "pluralSlug": "accounts",
    "slug": "account",
  },
]
`;

exports[`Schema parser schema with generic field types 1`] = `
[
  {
    "fields": [
      {
        "id": "json-0",
        "meta": {
          "name": "Schema.Blob",
          "type": "unknown",
        },
        "name": "Metadata1",
        "required": true,
        "slug": "metadata1",
        "type": "json",
        "unique": false,
      },
      {
        "id": "json-0",
        "meta": {
          "type": "enum",
          "value": [
            "option-1",
          ],
        },
        "name": "Metadata2",
        "required": true,
        "slug": "metadata2",
        "type": "json",
        "unique": false,
      },
      {
        "id": "json-0",
        "meta": {
          "type": "enum",
          "value": [
            "option-1",
            "option-2",
          ],
        },
        "name": "Metadata3",
        "required": true,
        "slug": "metadata3",
        "type": "json",
        "unique": false,
      },
      {
        "id": "json-0",
        "meta": [
          {
            "name": "name",
            "required": true,
            "type": "string",
          },
        ],
        "name": "Metadata4",
        "required": true,
        "slug": "metadata4",
        "type": "json",
        "unique": false,
      },
      {
        "id": "json-0",
        "meta": {
          "children": [
            {
              "name": "name",
              "required": true,
              "type": "string",
            },
          ],
          "type": "array",
        },
        "name": "Metadata5",
        "required": true,
        "slug": "metadata5",
        "type": "json",
        "unique": false,
      },
      {
        "id": "json-0",
        "meta": {
          "type": "[{ name: string }]",
        },
        "name": "Metadata6",
        "required": true,
        "slug": "metadata6",
        "type": "json",
        "unique": false,
      },
      {
        "id": "json-0",
        "meta": [
          {
            "name": "constant",
            "required": true,
            "type": "enum",
            "value": [
              "ronin",
            ],
          },
        ],
        "name": "Metadata7",
        "required": true,
        "slug": "metadata7",
        "type": "json",
        "unique": false,
      },
      {
        "id": "json-0",
        "meta": [
          {
            "name": "name",
            "required": true,
            "type": "string",
          },
          {
            "name": "status",
            "required": false,
            "type": "enum",
            "value": [
              "active",
              "inactive",
            ],
          },
          {
            "meta": [
              {
                "name": "type",
                "required": true,
                "type": "enum",
                "value": [
                  "images",
                ],
              },
            ],
            "name": "avatar",
            "required": true,
            "type": "unknown",
          },
          {
            "children": [
              {
                "name": "name",
                "required": true,
                "type": "string",
              },
              {
                "name": "count",
                "required": false,
                "type": "number",
              },
            ],
            "name": "users",
            "required": true,
            "type": "array",
          },
          {
            "children": [
              {
                "name": "device",
                "required": true,
                "type": "string",
              },
              {
                "name": "likes",
                "required": false,
                "type": "number",
              },
              {
                "name": "active",
                "required": true,
                "type": "boolean",
              },
              {
                "children": {
                  "type": "string",
                },
                "name": "array",
                "required": true,
                "type": "array",
              },
              {
                "children": [
                  {
                    "name": "createdAt",
                    "required": true,
                    "type": "date",
                  },
                ],
                "name": "dates",
                "required": true,
                "type": "object",
              },
            ],
            "name": "metadata",
            "required": true,
            "type": "object",
          },
        ],
        "name": "Metadata8",
        "required": true,
        "slug": "metadata8",
        "type": "json",
        "unique": false,
      },
    ],
    "name": "Account",
    "pluralName": "Accounts",
    "pluralSlug": "accounts",
    "slug": "account",
  },
]
`;

exports[`Schema parser schema with TSDoc 1`] = `
[
  {
    "fields": [
      {
        "displayAs": "single-line",
        "id": "string-0",
        "name": "User name",
        "required": true,
        "slug": "name",
        "type": "string",
        "unique": false,
      },
      {
        "description": "This is a field description.",
        "details": {
          "maxSize": "100",
          "minSize": "1",
          "pattern": "^[A-Z]{2}$",
        },
        "displayAs": "single-line",
        "id": "string-0",
        "name": "User's country",
        "required": true,
        "slug": "country",
        "type": "string",
        "unique": false,
      },
    ],
    "name": "Account",
    "pluralName": "Accounts",
    "pluralSlug": "accounts",
    "slug": "account",
  },
]
`;

exports[`Schema parser with named imports 1`] = `
[
  {
    "fields": [
      {
        "displayAs": "single-line",
        "id": "string-0",
        "name": "Name",
        "required": true,
        "slug": "name",
        "type": "string",
        "unique": false,
      },
      {
        "id": "boolean-0",
        "name": "Active",
        "required": true,
        "slug": "active",
        "type": "boolean",
        "unique": false,
      },
      {
        "id": "number-0",
        "name": "Likes",
        "required": true,
        "slug": "likes",
        "type": "number",
        "unique": false,
      },
      {
        "id": "date-0",
        "name": "ActiveAt",
        "required": true,
        "slug": "activeAt",
        "type": "date",
        "unique": false,
      },
      {
        "id": "blob-0",
        "name": "Avatar",
        "required": true,
        "slug": "avatar",
        "type": "blob",
        "unique": false,
      },
    ],
    "name": "Account",
    "pluralName": "My Accounts",
    "pluralSlug": "myAccounts",
    "slug": "account",
  },
]
`;

exports[`Schema parser with aliased imports 1`] = `
[
  {
    "fields": [
      {
        "displayAs": "single-line",
        "id": "string-0",
        "name": "Name",
        "required": true,
        "slug": "name",
        "type": "string",
        "unique": false,
      },
      {
        "id": "boolean-0",
        "name": "Active",
        "required": true,
        "slug": "active",
        "type": "boolean",
        "unique": false,
      },
      {
        "id": "number-0",
        "name": "Likes",
        "required": true,
        "slug": "likes",
        "type": "number",
        "unique": false,
      },
      {
        "id": "date-0",
        "name": "ActiveAt",
        "required": true,
        "slug": "activeAt",
        "type": "date",
        "unique": false,
      },
      {
        "id": "blob-0",
        "name": "Avatar",
        "required": true,
        "slug": "avatar",
        "type": "blob",
        "unique": false,
      },
    ],
    "name": "Account",
    "pluralName": "My Accounts",
    "pluralSlug": "myAccounts",
    "slug": "account",
  },
]
`;

exports[`Schema parser schema definitions file 1`] = `Promise {}`;

exports[`Schema parser schema with unsupported property type in generic field types 1`] = `
"Unsupported property type \`name(): void;\` in Schema.JSON<{ 
                name(): void; 
            }>"
`;
